k8s/ingress/deploy/lambda-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lambda-ingress-service
spec:
  type: ClusterIP
  selector:
    app: lambda-ingress-app
  ports:
  - port: 80
    targetPort: lambda-port
    protocol: TCP
